--- a/.github/workflows/3way-option.yml
+++ b/.github/workflows/3way-option.yml
@@ -54,7 +54,7 @@ jobs:
           MODE=$(grep '^mode=' solar_state.txt | cut -d '=' -f2 || echo "normal")
           SOLAR_ON_SENT=$(grep '^solar_on_sent=' solar_state.txt | cut -d '=' -f2 || echo "false")
           SOLAR_OFF_SENT=$(grep '^solar_off_sent=' solar_state.txt | cut -d '=' -f2 || echo "false")
-          LAST_SOC=$(grep '^last_soc=' solar_state.txt | cut -d '=' -f2 || echo "")
+          LAST_SOC=$(grep '^last_soc=' solar_state.txt | tail -n1 | cut -d '=' -f2 || echo "")
 
           echo "mode=$MODE" >> $GITHUB_OUTPUT
           echo "solar_on_sent=$SOLAR_ON_SENT" >> $GITHUB_OUTPUT
@@ -117,7 +117,6 @@ jobs:
             EVENT_TEXT="Normal_Batt"
           fi
 
-          # ตรวจสอบสถานะที่ยังไม่เคยส่งเลย
           if [ "$SOLAR_ON_SENT" = "false" ] && [ "$NEW_MODE" = "normal" ]; then
             SEND_SOLAR_ON="true"
           fi
@@ -190,8 +189,28 @@ jobs:
         run: |
           git config user.name "GitHub Actions Bot"
           git config user.email "actions@github.com"
+
           git add solar_state.txt
-          git diff --quiet && git diff --staged --quiet || git commit -m "Update state: mode=$MODE, SOC=$SOC"
+
+          # ตรวจสอบว่าไฟล์มีการเปลี่ยนแปลงจริง
+          if git diff --cached --quiet; then
+            echo "ℹ️ ไม่มีการเปลี่ยนแปลงใน solar_state.txt → ข้ามการ commit"
+            exit 0
+          fi
+
+          # ดึงข้อมูลล่าสุดจาก remote เพื่อ sync ก่อน push
+          echo "🔄 ดึงข้อมูลจาก remote ก่อน push"
+          git pull --rebase || {
+            echo "❌ git pull ล้มเหลว → ยกเลิกการ commit เพื่อป้องกันข้อมูลซ้ำ"
+            exit 1
+          }
+
+          # Commit และ push
+          git commit -m "Update state: mode=$MODE, SOC=$SOC"
           git remote set-url origin https://${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
-          git push
+          git push || {
+            echo "❌ Push ล้มเหลว → ยกเลิกการทำงานเพื่อป้องกันข้อมูลซ้ำ"
+            exit 1
+          }
+
           echo "✅ State committed and pushed"
