--- a/.github/workflows/3way-option.yml
+++ b/.github/workflows/3way-option.yml
@@ -13,40 +13,49 @@ jobs:
         with:
           persist-credentials: false
 
-      - name: อ่านสถานะปัจจุบันและจัดการกรณีเริ่มต้น
+      - name: อ่านสถานะปัจจุบันหรือสร้างใหม่
         id: read_state
         env:
           SOC: ${{ github.event.client_payload.soc }}
         run: |
+          echo "📥 รับค่า SOC จาก ESP: $SOC"
+
           INIT_REQUIRED="false"
           SOC_CHANGED="true"
 
+          if [ -z "$SOC" ]; then
+            echo "❌ ไม่พบค่า SOC → ยกเลิก workflow"
+            exit 1
+          fi
+
           if [ ! -f solar_state.txt ] || [ ! -s solar_state.txt ]; then
-            echo "⚠️ solar_state.txt ไม่พบหรือว่าง → สร้างสถานะเริ่มต้นจาก SOC=$SOC"
+            echo "⚠️ ไม่พบไฟล์สถานะ → สร้างใหม่"
+
             if [ "$SOC" -le 25 ]; then
               MODE="low_batt"
+              EVER_LOW_BATT="true"
               SOLAR_ON_SENT="false"
               SOLAR_OFF_SENT="true"
-              echo "ส่ง solar_off ไป Sheet 3 (SOC=$SOC ≤ 25)"
+              echo "✅ ส่ง solar_off ไป Sheet 3"
               curl -X POST "https://docs.google.com/forms/d/e/1FAIpQLSfR4GihZk5nhFnJndejNVNji_5Mywbg3PIgZi3m3ZjQxGApQQ/formResponse" \
                 -d "entry.1012650439=solar_off" \
                 --fail --silent --show-error
-              echo "✅ Sheet 3: solar_off sent"
             else
               MODE="normal"
+              EVER_LOW_BATT="false"
               SOLAR_ON_SENT="true"
               SOLAR_OFF_SENT="false"
-              echo "ส่ง solar_on ไป Sheet 2 (SOC=$SOC > 25)"
+              echo "✅ ส่ง solar_on ไป Sheet 2"
               curl -X POST "https://docs.google.com/forms/d/e/1FAIpQLSchglVNdUfC_titEV191XeR_uH9NnVYyMMmtuoZmgM0oH3yVg/formResponse" \
                 -d "entry.29631913=solar_on" \
                 --fail --silent --show-error
-              echo "✅ Sheet 2: solar_on sent"
             fi
-            LAST_SOC="$SOC"
+
             echo "mode=$MODE" > solar_state.txt
             echo "solar_on_sent=$SOLAR_ON_SENT" >> solar_state.txt
             echo "solar_off_sent=$SOLAR_OFF_SENT" >> solar_state.txt
-            echo "last_soc=$LAST_SOC" >> solar_state.txt
+            echo "last_soc=$SOC" >> solar_state.txt
+            echo "ever_low_batt=$EVER_LOW_BATT" >> solar_state.txt
             INIT_REQUIRED="true"
           fi
 
@@ -54,6 +63,7 @@ jobs:
           SOLAR_ON_SENT=$(grep '^solar_on_sent=' solar_state.txt | cut -d '=' -f2 || echo "false")
           SOLAR_OFF_SENT=$(grep '^solar_off_sent=' solar_state.txt | cut -d '=' -f2 || echo "false")
           LAST_SOC=$(grep '^last_soc=' solar_state.txt | cut -d '=' -f2 || echo "")
+          EVER_LOW_BATT=$(grep '^ever_low_batt=' solar_state.txt | cut -d '=' -f2 || echo "false")
 
           if [ "$SOC" = "$LAST_SOC" ]; then
             SOC_CHANGED="false"
@@ -63,10 +73,11 @@ jobs:
           echo "solar_on_sent=$SOLAR_ON_SENT" >> $GITHUB_OUTPUT
           echo "solar_off_sent=$SOLAR_OFF_SENT" >> $GITHUB_OUTPUT
           echo "last_soc=$LAST_SOC" >> $GITHUB_OUTPUT
+          echo "ever_low_batt=$EVER_LOW_BATT" >> $GITHUB_OUTPUT
           echo "init_required=$INIT_REQUIRED" >> $GITHUB_OUTPUT
           echo "soc_changed=$SOC_CHANGED" >> $GITHUB_OUTPUT
 
-      - name: ตรวจสอบและเปลี่ยน Mode
+      - name: วิเคราะห์สถานะและตัดสินใจ
         id: check_mode
         env:
           SOC: ${{ github.event.client_payload.soc }}
@@ -74,16 +85,18 @@ jobs:
           SOLAR_ON_SENT: ${{ steps.read_state.outputs.solar_on_sent }}
           SOLAR_OFF_SENT: ${{ steps.read_state.outputs.solar_off_sent }}
           LAST_SOC: ${{ steps.read_state.outputs.last_soc }}
+          EVER_LOW_BATT: ${{ steps.read_state.outputs.ever_low_batt }}
           INIT_REQUIRED: ${{ steps.read_state.outputs.init_required }}
           SOC_CHANGED: ${{ steps.read_state.outputs.soc_changed }}
         run: |
           if [ "$INIT_REQUIRED" = "true" ]; then
-            echo "✅ ข้ามการตรวจสอบเพราะเพิ่งสร้างสถานะเริ่มต้น"
+            echo "✅ ข้ามการวิเคราะห์ เพราะเพิ่งสร้างสถานะ"
             echo "skip_sheet1=true" >> $GITHUB_OUTPUT
             echo "send_solar_on=false" >> $GITHUB_OUTPUT
             echo "send_solar_off=false" >> $GITHUB_OUTPUT
             echo "event_text=Init" >> $GITHUB_OUTPUT
             echo "mode=$CURRENT_MODE" >> $GITHUB_OUTPUT
+            echo "ever_low_batt=$EVER_LOW_BATT" >> $GITHUB_OUTPUT
             exit 0
           fi
 
@@ -94,25 +107,32 @@ jobs:
             echo "send_solar_off=false" >> $GITHUB_OUTPUT
             echo "event_text=No_Change" >> $GITHUB_OUTPUT
             echo "mode=$CURRENT_MODE" >> $GITHUB_OUTPUT
+            echo "ever_low_batt=$EVER_LOW_BATT" >> $GITHUB_OUTPUT
             exit 0
           fi
 
-          CURRENT_MODE=${CURRENT_MODE:-normal}
           NEW_MODE=$CURRENT_MODE
           EVENT_TEXT=""
           SEND_SOLAR_ON="false"
           SEND_SOLAR_OFF="false"
-          SKIP_SHEET1="false"
+          EVER_LOW_BATT_NEW=$EVER_LOW_BATT
 
           if [ "$CURRENT_MODE" = "normal" ]; then
             if [ "$SOC" -le 25 ]; then
               NEW_MODE="low_batt"
               EVENT_TEXT="Low_Batt"
               SEND_SOLAR_OFF="true"
+              EVER_LOW_BATT_NEW="true"
             else
               EVENT_TEXT="Normal_Batt"
-              if [ "$SOLAR_ON_SENT" = "false" ] && [ "$SOC" -ge 35 ]; then
-                SEND_SOLAR_ON="true"
+              if [ "$EVER_LOW_BATT" = "true" ]; then
+                if [ "$SOC" -ge 35 ]; then
+                  SEND_SOLAR_ON="true"
+                fi
+              else
+                if [ "$SOLAR_ON_SENT" = "false" ]; then
+                  SEND_SOLAR_ON="true"
+                fi
               fi
             fi
           elif [ "$CURRENT_MODE" = "low_batt" ]; then
@@ -123,23 +143,14 @@ jobs:
             else
               EVENT_TEXT="Low_Batt"
             fi
-          else
-            NEW_MODE="normal"
-            EVENT_TEXT="Normal_Batt"
-          fi
-
-          if [ "$SOLAR_ON_SENT" = "false" ] && [ "$NEW_MODE" = "normal" ]; then
-            SEND_SOLAR_ON="true"
-          fi
-          if [ "$SOLAR_OFF_SENT" = "false" ] && [ "$NEW_MODE" = "low_batt" ]; then
-            SEND_SOLAR_OFF="true"
           fi
 
           echo "mode=$NEW_MODE" >> $GITHUB_OUTPUT
           echo "event_text=$EVENT_TEXT" >> $GITHUB_OUTPUT
           echo "send_solar_on=$SEND_SOLAR_ON" >> $GITHUB_OUTPUT
           echo "send_solar_off=$SEND_SOLAR_OFF" >> $GITHUB_OUTPUT
-          echo "skip_sheet1=$SKIP_SHEET1" >> $GITHUB_OUTPUT
+          echo "skip_sheet1=false" >> $GITHUB_OUTPUT
+          echo "ever_low_batt=$EVER_LOW_BATT_NEW" >> $GITHUB_OUTPUT
 
       - name: ส่งข้อมูลไป Sheet 1
         if: steps.check_mode.outputs.skip_sheet1 != 'true'
@@ -162,10 +173,7 @@ jobs:
       - name: ส่ง solar_off ไป Sheet 3
         if: steps.check_mode.outputs.send_solar_off == 'true'
         run: |
-          curl -X POST "https://docs.google.com/forms/d/e/1FAIpQLSfR4GihZk5nhFnJndejNVNji_5Mywbg3PIgZi3m3ZjQxGApQQ/formResponse" \
-            -d "entry.1012650439=solar_off" \
-            --fail --silent --show-error
-
+          curl -X POST "https://docs.google.com/forms/d/e/1FAIpQLSfR4GihZk5nhFnJndejNVNji_5Mywbg3PIgZi3m3ZjQxGAp
       - name: บันทึกสถานะใหม่
         env:
           NEW_MODE: ${{ steps.check_mode.outputs.mode }}
@@ -174,6 +182,7 @@ jobs:
           SOLAR_ON_SENT_OLD: ${{ steps.read_state.outputs.solar_on_sent }}
           SOLAR_OFF_SENT_OLD: ${{ steps.read_state.outputs.solar_off_sent }}
           SOC: ${{ github.event.client_payload.soc }}
+          EVER_LOW_BATT: ${{ steps.check_mode.outputs.ever_low_batt }}
         run: |
           if [ "$SEND_SOLAR_ON" = "true" ]; then
             SOLAR_ON_SENT="true"
@@ -190,7 +199,8 @@ jobs:
           echo "solar_on_sent=$SOLAR_ON_SENT" >> solar_state.txt
           echo "solar_off_sent=$SOLAR_OFF_SENT" >> solar_state.txt
           echo "last_soc=$SOC" >> solar_state.txt
-          echo "📄 State saved: mode=$NEW_MODE, solar_on_sent=$SOLAR_ON_SENT, solar_off_sent=$SOLAR_OFF_SENT, last_soc=$SOC"
+          echo "ever_low_batt=$EVER_LOW_BATT" >> solar_state.txt
+          echo "📄 บันทึกสถานะใหม่เรียบร้อย"
 
       - name: Commit state changes
         env:
@@ -203,4 +213,5 @@ jobs:
           git diff --quiet && git diff --staged --quiet || git commit -m "Update state: mode=$MODE, SOC=$SOC"
           git remote set-url origin https://${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
           git push
-          echo "✅ State committed and pushed"
+          echo "✅ อัปเดตสถานะและ push สำเร็จ"
+
