--- a/.github/workflows/3way-option.yml
+++ b/.github/workflows/3way-option.yml
@@ -13,14 +13,14 @@ jobs:
         with:
           persist-credentials: false
 
-      - name: อ่านสถานะหรือเติมค่าเริ่มต้น
+      - name: อ่านสถานะหรือสร้างใหม่
         id: read_state
         env:
           SOC: ${{ github.event.client_payload.soc }}
         run: |
           echo "📥 รับค่า SOC: $SOC"
 
-          INIT_REQUIRED="false"
+          FIRST_TIME="false"
           SOC_CHANGED="true"
 
           if [ -z "$SOC" ]; then
@@ -36,44 +36,28 @@ jobs:
           LAST_SOC=$(grep '^last_soc=' solar_state.txt | cut -d '=' -f2)
           EVER_LOW_BATT=$(grep '^ever_low_batt=' solar_state.txt | cut -d '=' -f2)
 
-          if [ -z "$MODE" ]; then
+          if [ -z "$MODE" ] || [ -z "$SOLAR_ON_SENT" ] || [ -z "$SOLAR_OFF_SENT" ] || [ -z "$LAST_SOC" ] || [ -z "$EVER_LOW_BATT" ]; then
+            echo "⚠️ ข้อมูลไม่ครบ → สร้างใหม่"
+            FIRST_TIME="true"
+
             if [ "$SOC" -le 25 ]; then
               MODE="low_batt"
-            else
-              MODE="normal"
-            fi
-            INIT_REQUIRED="true"
-          fi
-
-          if [ -z "$SOLAR_ON_SENT" ]; then
-            SOLAR_ON_SENT="false"
-            INIT_REQUIRED="true"
-          fi
-
-          if [ -z "$SOLAR_OFF_SENT" ]; then
-            SOLAR_OFF_SENT="false"
-            INIT_REQUIRED="true"
-          fi
-
-          if [ -z "$LAST_SOC" ]; then
-            LAST_SOC="$SOC"
-            INIT_REQUIRED="true"
-          fi
-
-          if [ -z "$EVER_LOW_BATT" ]; then
-            if [ "$SOC" -le 25 ]; then
               EVER_LOW_BATT="true"
             else
+              MODE="normal"
               EVER_LOW_BATT="false"
             fi
-            INIT_REQUIRED="true"
-          fi
 
-          echo "mode=$MODE" > solar_state.txt
-          echo "solar_on_sent=$SOLAR_ON_SENT" >> solar_state.txt
-          echo "solar_off_sent=$SOLAR_OFF_SENT" >> solar_state.txt
-          echo "last_soc=$LAST_SOC" >> solar_state.txt
-          echo "ever_low_batt=$EVER_LOW_BATT" >> solar_state.txt
+            SOLAR_ON_SENT="false"
+            SOLAR_OFF_SENT="false"
+            LAST_SOC="$SOC"
+
+            echo "mode=$MODE" > solar_state.txt
+            echo "solar_on_sent=$SOLAR_ON_SENT" >> solar_state.txt
+            echo "solar_off_sent=$SOLAR_OFF_SENT" >> solar_state.txt
+            echo "last_soc=$LAST_SOC" >> solar_state.txt
+            echo "ever_low_batt=$EVER_LOW_BATT" >> solar_state.txt
+          fi
 
           if [ "$SOC" = "$LAST_SOC" ]; then
             SOC_CHANGED="false"
@@ -84,7 +68,7 @@ jobs:
           echo "solar_off_sent=$SOLAR_OFF_SENT" >> $GITHUB_OUTPUT
           echo "last_soc=$LAST_SOC" >> $GITHUB_OUTPUT
           echo "ever_low_batt=$EVER_LOW_BATT" >> $GITHUB_OUTPUT
-          echo "init_required=$INIT_REQUIRED" >> $GITHUB_OUTPUT
+          echo "first_time=$FIRST_TIME" >> $GITHUB_OUTPUT
           echo "soc_changed=$SOC_CHANGED" >> $GITHUB_OUTPUT
 
       - name: วิเคราะห์สถานะ
@@ -95,9 +79,31 @@ jobs:
           SOLAR_ON_SENT: ${{ steps.read_state.outputs.solar_on_sent }}
           SOLAR_OFF_SENT: ${{ steps.read_state.outputs.solar_off_sent }}
           EVER_LOW_BATT: ${{ steps.read_state.outputs.ever_low_batt }}
-          INIT_REQUIRED: ${{ steps.read_state.outputs.init_required }}
+          FIRST_TIME: ${{ steps.read_state.outputs.first_time }}
           SOC_CHANGED: ${{ steps.read_state.outputs.soc_changed }}
         run: |
+          if [ "$FIRST_TIME" = "true" ]; then
+            echo "✅ ส่งครั้งแรกหลังสร้างไฟล์"
+            echo "skip_sheet1=false" >> $GITHUB_OUTPUT
+            echo "send_solar_on=false" >> $GITHUB_OUTPUT
+            echo "send_solar_off=false" >> $GITHUB_OUTPUT
+            echo "event_text=Init" >> $GITHUB_OUTPUT
+            echo "mode=$CURRENT_MODE" >> $GITHUB_OUTPUT
+            echo "ever_low_batt=$EVER_LOW_BATT" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
+          if [ "$SOC_CHANGED" != "true" ]; then
+            echo "✅ SOC ไม่เปลี่ยน → ข้าม"
+            echo "skip_sheet1=true" >> $GITHUB_OUTPUT
+            echo "send_solar_on=false" >> $GITHUB_OUTPUT
+            echo "send_solar_off=false" >> $GITHUB_OUTPUT
+            echo "event_text=No_Change" >> $GITHUB_OUTPUT
+            echo "mode=$CURRENT_MODE" >> $GITHUB_OUTPUT
+            echo "ever_low_batt=$EVER_LOW_BATT" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
           NEW_MODE=$CURRENT_MODE
           EVENT_TEXT=""
           SEND_SOLAR_ON="false"
@@ -127,6 +133,7 @@ jobs:
           echo "ever_low_batt=$EVER_LOW_BATT_NEW" >> $GITHUB_OUTPUT
 
       - name: ส่งข้อมูลไป Sheet 1
+        if: steps.check_mode.outputs.skip_sheet1 != 'true'
         env:
           SOC: ${{ github.event.client_payload.soc }}
           EVENT: ${{ steps.check_mode.outputs.event_text }}
@@ -171,7 +178,8 @@ jobs:
 
           echo "mode=$NEW_MODE" > solar_state.txt
           echo "solar_on_sent=$SOLAR_ON_SENT" >> solar_state.txt
-          echo "solar_off_sent=$SOLAR_OFF_SENT" >> solar_state.txt
+          echo "solar_off_sent=$SOLAR_OFF_SENT"
+                    echo "solar_off_sent=$SOLAR_OFF_SENT" >> solar_state.txt
           echo "last_soc=$SOC" >> solar_state.txt
           echo "ever_low_batt=$EVER_LOW_BATT" >> solar_state.txt
 
